[package]
name = "gossip_glomers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
clojure-reader = "*"
itertools = "*"
ordered-float = "*"
regex = "*"

[lints.rust]
unsafe_code = "forbid"
non_ascii_idents = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
